--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="http://frimmy.github.io/">Frimmy</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <!-- <li class="active"><a href="#">Home</a></li> -->
+            <li><a href="http://adrianfrimpong.com/">Blog</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -53,7 +53,8 @@
 
       <div class="starter-template">
         <h1>Frimmy</h1>
-        <p class="lead">This is where I'll host my github projects.<br> Full-stack or bust: build, break, build</p>
+        <p class="lead">This is where I'll host my github projects.<br> 
+        Full-stack or bust: build, break, build</p>
       </div>
 
     </div><!-- /.container -->
