added gravitar, updated links to github io

--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
     <div class="container">
 
       <div class="starter-template">
+        
+        <img src="images/gravitar.jpg" class="img-responsive img-circle" alt="gravitar">
         <h1>Frimmy</h1>
-        <p class="lead">This is where I'll host my github projects.<br> 
+        <p class="lead">Welcome to where I host my projects!<br> 
         Full-stack or bust: build, break, build</p>
       </div>
+
 
     </div><!-- /.container -->
 
