--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#">Home</a></li> -->
             <li><a href="http://adrianfrimpong.com/">Blog</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -56,7 +56,10 @@
         <img src="images/gravitar.jpg" class="img-responsive img-circle" alt="gravitar">
         <h1>Frimmy</h1>
         <p class="lead">Welcome to where I host my projects!<br> 
-        Full-stack or bust: build, break, build</p>
+        Full-stack or bust: build, break, build
+        
+        <p><a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io  "role="button">Send me a shout! </a></p>
+        </p>
       </div>
 
 
