--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p class="lead">Welcome to where I host my projects!<br> 
         Full-stack or bust: build, break, build
         
-        <p><a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io  "role="button">Send me a shout! </a></p>
+        <p><a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io"role="button">Send me a shout! </a></p>
         </p>
       </div>
 
@@ -71,5 +71,15 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+    <!-- Google analytics tracking -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-23471322-1', 'adrianfrimpong.com');
+        ga('send', 'pageview');
+    </script>
   </body>
 </html>
