added links to projects

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
         <p><a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io"role="button">Send me a shout! </a></p>
         </p>
       </div>
+      <section class="projects">
+        <div class="row">
+          <div class="col-md-4"><a href="http://frimmy.github.io/GoogleCloneProj/" alt="Google Clone">Google Clone</a></div>
+          <div class="col-md-4"><a href="http://frimmy.github.io/37Signals/" alt="37Signals clone">37Signals Clone</a></div>
+          <div class="col-md-4"><a href="http://frimmy.github.io/DrawSomething/" alt="CSS3 animations">Animations with CSS3</a></div>
+        </div>
+        <div class="row">
+          <div class="col-md-6"><a href="http://frimmy.github.io/Hot-Or-Cold/" alt="Hot Or Cold">Hot Or Cold</a></div>
+          <div class="col-md-6"><a href="http://frimmy.github.io/Shopping-List-Web-App/" alt="Shopping List">Shopping List(with AngularJS</a></div>
+          <!-- <div class="col-md-4"><a href="">this is a link</a></div> -->
+        </div>
+      </section>
 
 
     </div><!-- /.container -->
