retooling my projects page! version one getting there, going to match it sorta close to wireframe.

--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
     <div id="main" class="container">
 
         <div id="summary">
-            <h1>Frimmy</h1>
-            <p>
-                Howdy! I'm Adrian, a full stack Python/Flask web developer. Check out my latest work below, peruse the resume, view the vids and send me a shout!</p>
+            <div id="blurb">
+                <h1>Frimmy</h1>
+                <p class="lead">
+                    Howdy! I'm Adrian, a full stack Python/Flask web developer. Check out my latest work below, peruse the resume, view the vids and send me a shout!</p>
 
 
 
-            <p class="lead">Welcome to where I host my projects!
-                <br>Full-stack or bust: build, break, build
+                <p class="lead">Welcome to where I host my projects!
+                    <br>Full-stack or bust: build, break, build</p>
 
-                <p><a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io" role="button">Send me a shout! </a>
-                </p>
-            </p>
+
+            </div>
         </div>
         <section class="projects">
             <div class="row">
@@ -84,6 +84,11 @@
                 <div class="col-md-6"><a href="http://frimmy.github.io/Shopping-List-Web-App/" alt="Shopping List">Shopping List(with AngularJS</a>
                 </div>
                 <!-- <div class="col-md-4"><a href="">this is a link</a></div> -->
+                                <p><a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io" role="button">Send me a shout! </a>
+
+
+                </p>
+
             </div>
         </section>
 
