Updated blurb section. TODO: Adding skills section, Recent projects carousel with javascript tastiness (reactttT!!!!), contact section, port over to make a simple Python flask app where users can send me emails from the browserrr

--- a/index.html
+++ b/index.html
@@ -57,15 +57,12 @@
 
         <div id="summary">
             <div id="blurb">
-                <h1>Frimmy</h1>
+                <h1>Howdy</h1>
                 <p class="lead">
-                    Howdy! I'm Adrian, a full stack Python/Flask web developer. Check out my latest work below, peruse the resume, view the vids and send me a shout!</p>
-
-
-
-                <p class="lead">Welcome to where I host my projects!
-                    <br>Full-stack or bust: build, break, build</p>
-
+                    I'm Adrian, one part psych-major, another part improv-comedian, and even more parts web developer.</p>
+                <p class="lead">Check out my latest work below and send me a shout! I'd love to hear from you.
+                    <br>Full-stack or bust: build, break, build
+                    <br>On the way: the resume, the vids and things</p>
 
             </div>
         </div>
@@ -84,7 +81,7 @@
                 <div class="col-md-6"><a href="http://frimmy.github.io/Shopping-List-Web-App/" alt="Shopping List">Shopping List(with AngularJS</a>
                 </div>
                 <!-- <div class="col-md-4"><a href="">this is a link</a></div> -->
-                                <p><a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io" role="button">Send me a shout! </a>
+                <p><a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io" role="button">Send me a shout! </a>
 
 
                 </p>
