Using twitter bootstrap's thumbnails for default project display

--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@
         </section>
         <section class="projects">
             <div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="https://avatars0.githubusercontent.com/u/3891663?s=166" alt="Frimmy's Gravatar">
+                        <div class="caption">
+                            <h3>Test Project Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, neque delectus ipsa unde fugiat soluta cumque dignissimos nobis similique tempora nostrum impedit hic! Necessitatibus consequatur deleniti culpa neque corporis ratione.</p>
+                            <p><a href="#" class="btn btn-primary" role="button">Demo</a>  <a href="#" class="btn btn-default" role="button">Github</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-6"><a href="http://frimmy.github.io/Hot-Or-Cold/" alt="Hot Or Cold">Hot Or Cold</a>
                 </div>
                 <div class="col-md-6"><a href="http://frimmy.github.io/Shopping-List-Web-App/" alt="Shopping List">Shopping List(with AngularJS</a>
