--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <!-- <li class="active"><a href="#">Home</a></li> -->
+                    <li class="active"><a href="#summary">Home</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="http://adrianfrimpong.com/">Blog</a>
                     </li>
                     <li><a href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io">Contact</a>
@@ -58,19 +60,16 @@
             <div id="blurb">
                 <h1>Howdy</h1>
                 <p class="lead">
-                    I'm Adrian, one part psych-major, another part improv-comedian, and even more parts web developer.</p>
+                    I'm Adrian, an icecream sundae with scoops of psych-major, web-developer and comedy sprinkles on top.</p>
                 <p class="lead">Check out my latest work below and send me a shout! I'd love to hear from you.
-                    <br>Full-stack or bust: build, break, build
-                    <br>On the way: the resume, the vids and things</p>
-
             </div>
         </div>
-        <section name="skills">
+        <section id="skills">
             <div class="section-content">
                 <div class="section-title">
                     <h2>Skills</h1>
                 </div>
-                <div class="skills-bars">
+                <div class="section-details">
                     <ul>
                         <li>
                             <div class="progress progress-striped skills-bars">
@@ -129,96 +128,90 @@
                 </div>
             </div>
         </section>
-        <section class="projects">
-            <div class="row">
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                        <img src="https://avatars0.githubusercontent.com/u/3891663?s=166" alt="Frimmy's Gravatar">
-                        <div class="caption">
-                            <h3>Test Project Title</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, neque delectus ipsa unde fugiat soluta cumque dignissimos nobis similique tempora nostrum impedit hic! Necessitatibus consequatur deleniti culpa neque corporis ratione.</p>
-                            <p><a href="#" class="btn btn-primary" role="button">Demo</a>  <a href="#" class="btn btn-default" role="button">Github</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+        <section id="projects">
+            <div class="section-title">
+                <h2>Projects</h1>
             </div>
-            <div class="row">
-                <div class="col-md-6"><a href="http://frimmy.github.io/Hot-Or-Cold/" alt="Hot Or Cold">Hot Or Cold</a>
-                </div>
-                <div class="col-md-6"><a href="http://frimmy.github.io/Shopping-List-Web-App/" alt="Shopping List">Shopping List(with AngularJS</a>
-                </div>
-
-
-                <div id="myProjects" class="carousel slide row">
-
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                    </ol>
-                    <!-- Carousel items -->
-                    <div class="carousel-inner">
-                        <div class="active item">
-                            <div class="col-md-4"><a href="http://frimmy.github.io/GoogleCloneProj/" alt="Google Clone">Google Clone</a>
+            <div class="section-details">
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" id="find-me-pizza">
+                            <div class="caption">
+                                <h3>Find Me Pizza</h3>
+                                <p>Yelp/Google Maps API w/ Ouath 2.0 to find business around with search query of "pizza"</p>
+                                <p><a href="http://frimmy.github.io/findmepizza/" target="_blank" class="btn btn-primary" role="button">Demo</a>  <a target="_blank" href="https://github.com/frimmy/findmepizza" class="btn btn-default" role="button">Github</a>
+                                </p>
                             </div>
-                        </div>
-                        <div class="item">
-                            <div class="col-md-4"><a href="http://frimmy.github.io/37Signals/" alt="37Signals clone">37Signals Clone</a>
-                            </div>
-
-                        </div>
-                        <div class="item">
-                            <div class="col-md-4"><a href="http://frimmy.github.io/DrawSomething/" alt="CSS3 animations">Animations with CSS3</a>
-                            </div>
-
                         </div>
                     </div>
-                    <!-- Carousel nav -->
-                    <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-                    <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+
+
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" id="the-movie-db">
+                            <div class="caption">
+                                <h3>TheMovieDB Poster Search</h3>
+                                <p>The MovieDB 3rd party API finds movie posters based on text entered in search.</p>
+                                <p><a href="http://frimmy.github.io/api-test/" target="_blank" class="btn btn-primary" role="button">Demo</a>  <a href="https://github.com/frimmy/api-test" target="_blank" class="btn btn-default" role="button">Github</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" id="parks-quiz-app">
+                            <div class="caption">
+                                <h3>Parks and Rec Quiz App</h3>
+                                <p>Parks and Rec hand-rolled quiz app using OOP javascript, jQuery, and Twitter Bootstrap</p>
+                                <p><a href="http://frimmy.github.io/quiz-app/" target="_blank" class="btn btn-primary" role="button">Demo</a>  <a href="https://github.com/frimmy/quiz-app" target="_blank" class="btn btn-default" role="button">Github</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-        </section>
-        <div>
-            <a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io" role="button">Send me a shout! </a>
-        </div>
 
 
-        </div>
-        <!-- /.container -->
 
 
-        <!-- Bootstrap core JavaScript
+                <div>
+                    <a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io" role="button">Send me a shout! </a>
+                </div>
+
+            </div>
+    </div>
+    <!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
     ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-        <script>
-        // initialize the carousel
-        $(document).ready(function() {
-            $('.carousel').carousel();
-        });
-        </script>
-        <!-- Google analytics tracking -->
-        <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];`
-            x
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script>
+    // initialize the carousel
+    $(document).ready(function() {
+        $('.carousel').carousel();
+    });
+    </script>
+    <!-- Google analytics tracking -->
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];`
+        x
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-23471322-1', 'frimmy.github.io');
-        ga('send', 'pageview');
-        </script>
+    ga('create', 'UA-23471322-1', 'frimmy.github.io');
+    ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
