--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar">
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
