--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#summary">Home</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li class="active"><a href="#summary">Home</a>
+                    </li>
+                    <li><a href="#skills">Skills</a>
+                    </li>
+                    <li><a href="#projects">Projects</a>
+                    </li>
                     <li><a href="http://adrianfrimpong.com/">Blog</a>
                     </li>
-                    <li><a href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io">Contact</a>
+                    <li><a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -56,15 +59,17 @@
 
     <div id="main" class="container">
 
-        <div id="summary">
-            <div id="blurb">
-                <h1>Howdy</h1>
-                <p class="lead">
-                    I'm Adrian, an icecream sundae with scoops of psych-major, web-developer and comedy sprinkles on top.</p>
-                <p class="lead">Check out my latest work below and send me a shout! I'd love to hear from you.
+        <section id="summary" data-scroll-reveal>
+            <div class="section-content">
+                <div id="blurb">
+                    <h1>Howdy</h1>
+                    <p class="lead">
+                        I'm Adrian, an icecream sundae with scoops of psych-major, web-developer and comedy sprinkles on top.</p>
+                    <p class="lead">Check out my latest work below and send me a shout! I'd love to hear from you.</p>
+                </div>
             </div>
-        </div>
-        <section id="skills">
+        </section>
+        <section id="skills" data-scroll-reveal>
             <div class="section-content">
                 <div class="section-title">
                     <h2>Skills</h1>
@@ -72,7 +77,7 @@
                 <div class="section-details">
                     <ul>
                         <li>
-                            <div class="progress progress-striped skills-bars">
+                            <div class="progress progress-striped skills-bars active">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="7" style="width: 70%;">
                                     <span class="skill-description">Python, Flask, Unittest, Nose, TDD/BDD, OOP</span>
                                 </div>
@@ -80,35 +85,35 @@
                         </li>
 
                         <li>
-                            <div class="progress progress-striped skills-bars">
+                            <div class="progress progress-striped skills-bars active">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
                                     <span class="skill-description">SQL, SQLite, SQLAlchemy</span>
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <div class="progress progress-striped skills-bars">
+                            <div class="progress progress-striped skills-bars active">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                                     <span class="skill-description">JavaScript, jQuery, JSON</span>
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <div class="progress progress-striped skills-bars">
+                            <div class="progress progress-striped skills-bars active">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                                     <span class="skill-description">AJAX, 3rd Party APIs (Google Maps, Yelp, TMDb, etc)</span>
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <div class="progress progress-striped skills-bars">
+                            <div class="progress progress-striped skills-bars active">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
                                     <span class="skill-description">HTML(5), CSS(3), SASS, Compass</span>
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <div class="progress progress-striped skills-bars">
+                            <div class="progress progress-striped skills-bars active">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                                     <span class="skill-description">UI/UX, Wireframing, Twitter Bootstrap, Foundation, Responsive Design</span>
                                 </div>
@@ -116,7 +121,7 @@
                         </li>
 
                         <li>
-                            <div class="progress progress-striped skills-bars">
+                            <div class="progress progress-striped skills-bars active">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                                     <span class="skill-description">Windows, Powershell, Linux(Ubuntu), Bash, Heroku, Vagrant</span>
                                 </div>
@@ -128,7 +133,7 @@
                 </div>
             </div>
         </section>
-        <section id="projects">
+        <section id="projects" data-scroll-reveal>
             <div class="section-title">
                 <h2>Projects</h1>
             </div>
@@ -168,50 +173,51 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-                <div>
-                    <a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io" role="button">Send me a shout! </a>
+            </div>
+            <section id="contact" data-scroll-reveal>
+                <div class="section-title">
+                    <h2>Contact</h1>
                 </div>
+                <div class="section-details">
+                    <div>
+                        <a class="btn btn-primary btn-lg" href="mailto:adrianfrimpong@gmail.com?Subject=Hello from frimmy.github.io" role="button">Send me a shout! </a>
+                    </div>
+            </section>
 
             </div>
-    </div>
-    <!-- /.container -->
+            <!-- /.container -->
 
 
-    <!-- Bootstrap core JavaScript
+            <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+            <!-- Placed at the end of the document so the pages load faster -->
+            <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script>
-    // initialize the carousel
-    $(document).ready(function() {
-        $('.carousel').carousel();
-    });
-    </script>
-    <!-- Google analytics tracking -->
-    <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];`
-        x
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+            <!-- Latest compiled and minified JavaScript -->
+            <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-    ga('create', 'UA-23471322-1', 'frimmy.github.io');
-    ga('send', 'pageview');
-    </script>
+            <!-- Google analytics tracking -->
+            <script>
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];`
+                x
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-23471322-1', 'frimmy.github.io');
+            ga('send', 'pageview');
+            </script>
+            <script src='js/bower_components/scrollReveal.js/dist/scrollReveal.min.js'></script>
+            <script>
+            window.scrollReveal = new scrollReveal();
+            </script>
 </body>
 
 </html>
