Updated the reveal element so that hero image is displayed. Still needs to be optimized ..

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
     <div id="main" class="container">
 
-        <section id="summary" data-scroll-reveal>
+        <section id="summary">
             <div class="section-content">
-                <div id="blurb">
+                <div id="blurb" data-scroll-reveal>
                     <h1>Howdy</h1>
                     <p class="lead">
                         I'm Adrian, an icecream sundae with scoops of psych-major, web-developer and comedy sprinkles on top.</p>
