--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
                     </li>
                     <li><a href="#projects">Projects</a>
                     </li>
-                    <li><a href="http://adrianfrimpong.com/">Blog</a>
-                    </li>
                     <li><a href="#contact">Contact</a>
                     </li>
+                    <li><a href="http://adrianfrimpong.com/">Blog</a>
+                    </li>
+
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -217,6 +218,23 @@
             <script src='js/bower_components/scrollReveal.js/dist/scrollReveal.min.js'></script>
             <script>
             window.scrollReveal = new scrollReveal();
+            </script>
+            <script>
+            /*Scroll to nav-links */
+            $(function() {
+                $('a[href*=#]:not([href=#])').click(function() {
+                    if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
+                        var target = $(this.hash);
+                        target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                        if (target.length) {
+                            $('html,body').animate({
+                                scrollTop: target.offset().top
+                            }, 1000);
+                            return false;
+                        }
+                    }
+                });
+            });
             </script>
 </body>
 
