--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Frimmy's Github Projects</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <!-- Custom styles for this template -->
 
     <link rel="stylesheet" href="css/screen.css" media="screen, projection" type="text/css">
@@ -145,7 +145,7 @@
                             <div class="caption">
                                 <h3>Find Me Pizza</h3>
                                 <p>Yelp/Google Maps API w/ Ouath 2.0 to find business around with search query of "pizza"</p>
-                                <p><a href="http://frimmy.github.io/findmepizza/" target="_blank" class="btn btn-primary" role="button">Demo</a>  <a target="_blank" href="https://github.com/frimmy/findmepizza" class="btn btn-default" role="button">Github</a>
+                                <p><a href="http://frimmy.github.io/findmepizza/" target="_blank" class="btn btn-primary" role="button">Demo</a>  <a target="_blank" href="http://github.com/frimmy/findmepizza" class="btn btn-default" role="button">Github</a>
                                 </p>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                             <div class="caption">
                                 <h3>Parks and Rec Quiz App</h3>
                                 <p>Parks and Rec hand-rolled quiz app using OOP javascript, jQuery, and Twitter Bootstrap</p>
-                                <p><a href="http://frimmy.github.io/quiz-app/" target="_blank" class="btn btn-primary" role="button">Demo</a>  <a href="https://github.com/frimmy/quiz-app" target="_blank" class="btn btn-default" role="button">Github</a>
+                                <p><a href="http://frimmy.github.io/quiz-app/" target="_blank" class="btn btn-primary" role="button">Demo</a>  <a href="http://github.com/frimmy/quiz-app" target="_blank" class="btn btn-default" role="button">Github</a>
                                 </p>
                             </div>
                         </div>
@@ -205,8 +205,7 @@
                     (i[r].q = i[r].q || []).push(arguments)
                 }, i[r].l = 1 * new Date();
                 a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];`
-                x
+                m = s.getElementsByTagName(o)[0];
                 a.async = 1;
                 a.src = g;
                 m.parentNode.insertBefore(a, m)
