--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 
             <!-- Latest compiled and minified JavaScript -->
-            <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+            <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
             <!-- Google analytics tracking -->
             <script>
