updated info section

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
             <div class="section-content">
                 <div id="blurb" data-scroll-reveal>
                     <h1>Howdy</h1>
-                    <p class="lead">
-                        I'm Adrian, an icecream sundae with scoops of psych-major, web-developer and comedy sprinkles on top.</p>
+                    <p class="lead">Name's Adrian. Studied psychology. I use it always as a comedian who does web-dev for bollars.</p>
                     <p class="lead">Check out my latest work below and send me a shout! I'd love to hear from you.</p>
                 </div>
             </div>
