update howdy line lolol

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="section-content">
                 <div id="blurb" data-scroll-reveal>
                     <h1>Howdy</h1>
-                    <p class="lead">Name's Adrian. Studied psychology. I use it always as a comedian who does web-dev for bollars.</p>
+                    <p class="lead">Name's Adrian. Studied psychology. I comedy and web-dev.</p>
                     <p class="lead">Check out my latest work below and send me a shout! I'd love to hear from you.</p>
                 </div>
             </div>
