Update find me pizza project

--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
             <div class="section-details">
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail" id="find-me-pizza">
+                        <div class="thumbnail" id="frimmy-e-commerce">
                             <div class="caption">
-                                <h3>Find Me Pizza</h3>
-                                <p>Yelp/Google Maps API w/ Ouath 2.0 to find business around with search query of "pizza"</p>
-                                <p><a href="http://frimmy.github.io/findmepizza/" target="_blank" class="btn btn-primary" role="button">Demo</a>  <a target="_blank" href="http://github.com/frimmy/findmepizza" class="btn btn-default" role="button">Github</a>
+                                <h3>Frimmy's Clothing</h3>
+                                <p>E-commerce w/ React, Redux, Redux-Sagas, Firebase Auth and Firestore</p>
+                                <p><a href="https://frimmy-crwn-clothing.netlify.app/" target="_blank" class="btn btn-primary" role="button">Demo</a>  <a target="_blank" href="https://github.com/frimmy/crwn-clothing" class="btn btn-default" role="button">Github</a>
                                 </p>
                             </div>
                         </div>
